Z-index fix

--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -76,6 +76,7 @@
     flex-direction: column;
     align-items: center;
     overflow: auto;
+
   
   }
   
@@ -111,6 +112,8 @@
     max-height: 80vh;
     border-radius: 20px;
     overflow-y: auto;
+    z-index: 1;
+
     
     
   }
